# linalg-language

./: .gitignore  MyLexer.g4  MyParser.g4  README.md  ast_listener.py  generate.sh  interpreter.py  main.py  pyproject.toml  semantic_analyser.py  semantic_listener.py  test_main.py
.github/workflows/: test.yml
tests/ast/: input_1.txt  input_2.txt  input_3.txt  output_1.txt  output_2.txt  output_3.txt
tests/interpreter/: break_continue.txt  conditions.txt  element_reference.txt  for.txt  mat_operators.txt  return.txt  simple_math.txt  strings.txt  variables.txt  vectors.txt  while.txt
tests/parser/: input_1.txt  input_2.txt  invalid_input_1.txt  invalid_input_2.txt  invalid_input_3.txt
tests/semantic/: comparisons.txt  indexing.txt  indexing_bounds.txt  input_binary_operations.txt  input_comparisons.txt  input_compound_assignments.txt  input_ranges.txt  input_special_matrix.txt  input_variables.txt  input_vector.txt  redeclaration.txt  special_matrix.txt  transpose.txt
utils/: memory.py  types.py  values.py
